# stm32usb

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  FirmwareArchitecturedrawio.drawio  README.md  UartCom.drawio  UsbTest Debug.launch  UsbTest.cppcheck  UsbTest.ioc  build.bat  build_clean.bat  tatuq  toolchain.cmake
App/: CMakeLists.txt  common.hpp  main.cpp
App/app/ctrl/: ctrlTypes.hpp
App/app/gpio_srv/: GpioService.cpp  GpioService.hpp
App/app/i2c_srv/: I2cService.cpp  I2cService.hpp
App/app/uart_srv/: UartService.cpp  UartService.hpp
App/app/usb/: usbComTypes.hpp
App/ctrl/tf/: FrameController.cpp  FrameController.hpp
App/driver/tf/: FrameDriver.cpp  FrameDriver.hpp  TF_Integration.cpp  TF_integration.cpp  tinyFrame.cpp
App/hal/gpio/: Gpio.cpp  Gpio.hpp  GpioIrq.cpp  GpioIrq.hpp
App/hal/i2c/: I2c.cpp  I2c.hpp  I2cIrq.cpp  I2cIrq.hpp  I2cMaster.cpp  I2cMaster.hpp
App/hal/spi/: Spi.cpp  Spi.hpp
App/hal/uart/: Uart.cpp  Uart.hpp  UartConfig.cpp  UartConfig.hpp  UartIrq.cpp  UartIrq.hpp
App/lib/etl/: README.md
App/os/: builder.cpp  builder.hpp  hook.cpp  hooks.cpp  mutex.cpp  mutex.hpp  queue.cpp  queue.hpp  task.cpp  task.hpp  timer.cpp  timer.hpp
App/os/msg/: msg_broker.cpp  msg_broker.hpp  msg_def.hpp  receive_msg.cpp  receive_msg.hpp  send_msg.cpp  send_msg.hpp
App/srv/: Stopwatch.cpp  Stopwatch.hpp  Timeout.cpp  Timeout.hpp  debug.cpp  debug.hpp
App/task/: ctrlTask.cpp  ctrlTask.hpp  ctrl_task.cpp  ctrl_task.hpp  gpioTask.cpp  gpioTask.hpp  i2cTask.cpp  i2cTask.hpp  idleTask.cpp  idleTask.hpp  idle_task.cpp  idle_task.hpp  uartTask.cpp  uartTask.hpp  uart_task.cpp  uart_task.hpp  usbTask.cpp  usbTask.hpp
App/util/: Stopwatch.cpp  Stopwatch.hpp  Timeout.cpp  Timeout.hpp  debug.cpp  debug.hpp
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f3xx_it.h  tim.h
Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  tim.c  usart.c
Docu/: FirmwareArchitecturedrawio.drawio  I2cCom.drawio  UartCom.drawio
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32F3xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_i2c.h
Libraries/etl/: platform.h
Libraries/rtt/: CMakeLists.txt
Libraries/tf/: CMakeLists.txt  TF_Config.h  TinyFrame.h
Middlewares/ST/STM32_USB_Device_Library/: CMakeLists.txt
USB_DEVICE/: CMakeLists.txt
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
